fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -5,23 +5,37 @@ html {
 }
 
 @font-face {
-    font-family: "Helvetica-Roman";
+    font-family: "Helvetica";
     src: url(../fonts/hlv/HelveticaNeueCyr-Roman.otf);
-}
-@font-face{
-	font-family: "Helvetica-Bold"; 
-    src: url(../fonts/hlv/HelveticaNeueCyr-Bold.otf);
+	font-weight: 200;
+	font-style: normal;
 }
 
 @font-face{
-	font-family: "Helvetica-Medium"; 
+	font-family: "Helvetica-Bold"; 
+    src: url(../fonts/hlv/HelveticaNeueCyr-Bold.otf);
+	font-weight: 600;
+	font-style: normal;
+}
+
+@font-face{
+	font-family: "Helvetica"; 
     src: url(../fonts/hlv/HelveticaNeueCyr-Medium.otf);
+	font-weight: 400;
+	font-style: normal;
+}
+
+@font-face{
+	font-family: "Helvetica"; 
+    src: url(../fonts/hlv/HelveticaNeueCyr-Italic.otf);
+	font-weight: 200;
+	font-style: italic;
 }
 
 body {
 	padding: 0;
 	margin: 0;
-	font-family: "Helvetica-Roman", "Helvetica-Medium", "Helvetica-Bold", Helvetica, Arial, "Lucida Grande", sans-serif;
+	font-family: "Helvetica", Helvetica, Arial, "Lucida Grande", sans-serif;
 	line-height: 1.35;
 	letter-spacing: .65px;
 	font-weight: 200;
@@ -153,7 +167,7 @@ p {
 #left-column{
 	overflow:visible;
 	/*min-height: 100vh;*/
-	height: 100vh;
+	height: 100vw;
 	color: black;
 	background-color: white;
 	border-bottom: 2px solid rgba(0, 0, 0, 1);
@@ -171,7 +185,10 @@ p {
 	background-color: black;
 	color: white;
 }
-@media (min-width:768px){  
+@media (min-width:768px){ 
+	#left-column{
+		height: 100vh;
+	} 
 	body {
 		font-size: 2.5vmin;
 	}
@@ -707,7 +724,8 @@ video{
 }*/
 
 #side-header > ul > li > a{
-	/*padding-right: 50px;*/
+	/*padding-right: 20px;*/
+	margin-right: 1.6vh;
 }
 #font1, #font2, #font3{
 	/*margin-right: 50px;*/
@@ -715,5 +733,6 @@ video{
 	/*margin:1.6vh;*/
 }
 #side-header > ul{
-	/*padding-right: 20px;*/
+	/*padding-right: 30px;*/
+	/*margin-right: 30px;*/
 }
